# ayayaxyz

./: .gitignore  .pyre_configuration  LICENSE  README.md  build.py  pyproject.toml
.fleet/: run.json
.github/workflows/: pyre.yml
ayayaxyz/: __main__.py  bot.py  helper.py
ayayaxyz/api/: pixiv.py
ayayaxyz/api/pixiv/: __init__.py  exceptions.py
tests/: test_ayayaxyz.py
