[tool.poetry]
name = "ayayaxyz"
version = "0.1.1"
description = "A bot for Telegram"
authors = ["tretrauit <tretrauit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {version = "20.0a4", allow-prereleases = true}
gppt = {git = "https://github.com/eggplants/get-pixivpy-token", optional = true}
python-dotenv = "^0.20.0"
PixivPy3 = "^3.7.1"
Flask = {extras = ["async"], version = "^2.2.2"}
appdirs = "^1.4.4"
waitress = "^2.1.2"
requests-cache = "^0.9.6"

[tool.poetry.dev-dependencies]
pyre-check = "^0.9.16"

[tool.poetry.extras]
login = ["gppt"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
